--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         chmod 600 deploy.key
         eval `ssh-agent`
         ssh-add deploy.key
-        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -J ubuntu@ec2-34-251-192-94.eu-west-1.compute.amazonaws.com deployer@pprotocol.westeurope.cloudapp.azure.com 'cd pprotocol-account/public/static && GIT_SSH_COMMAND="ssh -i ~/.ssh/id_rsa_website" git pull origin master'
+        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -J ubuntu@63.34.140.33 deployer@pprotocol.westeurope.cloudapp.azure.com 'cd pprotocol-account/public/static && GIT_SSH_COMMAND="ssh -i ~/.ssh/id_rsa_website" git pull origin master'
