--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
 
     - name: deploy the latest code
       run: |
-        echo ${{ secrets.DEPLOYER_KEY }} > deploy.key
+        echo "${{ secrets.DEPLOYER_KEY }}" > deploy.key
         chmod 600 deploy.key
         ssh -i deploy.key -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -J ubuntu@63.34.140.33 deployer@pprotocol.westeurope.cloudapp.azure.com 'whoami'
