--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
-name: remote ssh command
-on: [push]
+name: Deploy
+on: [push, pull_request]
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -13,4 +12,4 @@ jobs:
         username: 'ubuntu'
         key: ${{ secrets.DEPLOYER_KEY }}
         port: 22
-        script: ssh -o StrictHostKeyChecking=no deployer@pprotocol.westeurope.cloudapp.azure.com 'cd pprotocol-account/public/static && GIT_SSH_COMMAND="ssh -i ~/.ssh/id_rsa_website" git pull origin master'
+        script: ssh -o StrictHostKeyChecking=no deployer@pprotocol.westeurope.cloudapp.azure.com 'cd pprotocol-account/public/static && GIT_SSH_COMMAND="ssh -i ~/.ssh/id_rsa_website" git pull origin master && cd && ./rails_restart'
